--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,9 @@
 
 *.iml
 
+# Build dir
+build/
+
 ## Directory-based project format:
 .idea/
 # if you remove the above rule, at least ignore the following:
