--- a/build.gradle
+++ b/build.gradle
@@ -1,16 +1,34 @@
 apply plugin: 'java'
-//apply plugin: 'maven'
 
-version = 'v0.1.2-alpha'
+apply plugin: 'maven'
+apply plugin: 'signing'
+
+version = 'v0.1.3-alpha'
 
 sourceCompatibility = 1.5
 
+/*
 jar {
     archiveName = "qatja.jar"
 
     manifest {
         attributes("Implementation-Title": "Gradle", "Implementation-Version": version)
     }
+}
+*/
+
+task javadocJar(type: Jar) {
+    classifier = 'javadoc'
+    from javadoc
+}
+
+task sourcesJar(type: Jar) {
+    classifier = 'sources'
+    from sourceSets.main.allSource
+}
+
+artifacts {
+    archives javadocJar, sourcesJar
 }
 
 repositories {
