--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,11 @@
 apply plugin: 'java'
 
-apply plugin: 'maven'
-apply plugin: 'signing'
+// apply plugin: 'maven'
+// apply plugin: 'signing'
 
-version = 'v0.1.3-alpha'
+// version = 'v0.1.3-alpha'
 
-sourceCompatibility = 1.5
+// sourceCompatibility = 1.5
 
 /*
 jar {
@@ -17,28 +17,31 @@ jar {
 }
 */
 
-task javadocJar(type: Jar) {
-    classifier = 'javadoc'
-    from javadoc
-}
+// task javadocJar(type: Jar) {
+//     classifier = 'javadoc'
+//     from javadoc
+// }
 
-task sourcesJar(type: Jar) {
-    classifier = 'sources'
-    from sourceSets.main.allSource
-}
+// task sourcesJar(type: Jar) {
+//     classifier = 'sources'
+//     from sourceSets.main.allSource
+// }
 
-artifacts {
-    archives javadocJar, sourcesJar
-}
+// artifacts {
+//     archives javadocJar, sourcesJar
+// }
 
 repositories {
-    mavenCentral()
+    jcenter()
 }
 
 dependencies {
     compile 'com.googlecode.juniversalchardet:juniversalchardet:1.0.3'
 
-    testCompile group: 'junit', name: 'junit', version: '4.11'
+    // testCompile group: 'junit', name: 'junit', version: '4.11'
+
+    testCompile 'junit:junit:4.12'
+    testCompile 'org.hamcrest:hamcrest-library:1.3'
 }
 
 /*
