--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,11 @@
-sudo: false
-
 language: java
 
-jdk:
-  - oraclejdk8
-  - oraclejdk7
-  - openjdk6
+before_install:
+  - if [ -n "$TRAVIS_TAG" ]; then ./travis_prebuild.sh; fi
 
-script:
-  - gradle build
+deploy:
+  provider: script
+  script: gradle clean bintrayUpload
+  skip_cleanup: true
+  on:
+    tags: true
