--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: java
 
 before_install:
-  - if [ -n "$TRAVIS_TAG" ]; then ./travis_prebuild.sh; fi
+  - ./travis_prebuild.sh;
 
 deploy:
   provider: script
